--- a/annotation_monte_cristo.ipynb
+++ b/annotation_monte_cristo.ipynb
@@ -13,7 +13,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 31,
       "metadata": {
         "id": "JOyUp8ydlCLG"
       },
@@ -44,7 +44,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 32,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -68,7 +68,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": 33,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -93,7 +93,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 34,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -116,7 +116,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 35,
       "metadata": {
         "id": "fwuLlrqwmWnV"
       },
@@ -132,7 +132,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 36,
       "metadata": {
         "id": "e1TVgE5XmWqE"
       },
@@ -144,7 +144,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 37,
       "metadata": {
         "id": "vXK0Z9FpmWs4"
       },
@@ -1351,7 +1351,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 38,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1362,16 +1362,16 @@
       "outputs": [],
       "source": [
         "# creating csv file to store spacy output\n",
-        "filename = \"spacy_output.csv\"\n",
-        "header = [\"TOKEN\", \"POS\",\"LEMMA\"]\n",
+        "# filename = \"spacy_output.csv\"\n",
+        "# header = [\"TOKEN\", \"POS\",\"LEMMA\"]\n",
         "\n",
-        "with open(filename, \"w\", newline=\"\", encoding=\"UTF-8\") as csvfile:\n",
-        "    writer = csv.writer(csvfile)\n",
-        "    writer.writerow(header)\n",
+        "#with open(filename, \"w\", newline=\"\", encoding=\"UTF-8\") as csvfile:\n",
+        "    #writer = csv.writer(csvfile)\n",
+        "    #writer.writerow(header)\n",
         "\n",
-        "    for token in doc:\n",
-        "        row = [token.text, token.pos_,token.lemma_]\n",
-        "        writer.writerow(row)"
+        "    #for token in doc:\n",
+        "        #row = [token.text, token.pos_,token.lemma_]\n",
+        "        #writer.writerow(row)"
       ]
     },
     {
@@ -1392,7 +1392,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 39,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1405,26 +1405,26 @@
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "/tmp/ipykernel_7569/3870423421.py:2: FutureWarning: The error_bad_lines argument has been deprecated and will be removed in a future version. Use on_bad_lines in the future.\n",
+            "/tmp/ipykernel_26831/1734072599.py:2: FutureWarning: The error_bad_lines argument has been deprecated and will be removed in a future version. Use on_bad_lines in the future.\n",
             "\n",
             "\n",
-            "  df_spacy = pd.read_csv('spacy_output.csv', error_bad_lines=False, sep = ',')\n",
-            "/tmp/ipykernel_7569/3870423421.py:3: FutureWarning: The error_bad_lines argument has been deprecated and will be removed in a future version. Use on_bad_lines in the future.\n",
+            "  df_spacy = pd.read_csv('data/spacy_output.csv', error_bad_lines=False, sep = ',')\n",
+            "/tmp/ipykernel_26831/1734072599.py:3: FutureWarning: The error_bad_lines argument has been deprecated and will be removed in a future version. Use on_bad_lines in the future.\n",
             "\n",
             "\n",
-            "  df_gold = pd.read_csv('spacy_output_gold.csv', error_bad_lines=False, sep = ';')\n"
+            "  df_gold = pd.read_csv('data/spacy_output_gold.csv', error_bad_lines=False, sep = ';')\n"
           ]
         }
       ],
       "source": [
         "# load csv files as dataframes\n",
-        "df_spacy = pd.read_csv('spacy_output.csv', error_bad_lines=False, sep = ',')\n",
-        "df_gold = pd.read_csv('spacy_output_gold.csv', error_bad_lines=False, sep = ';')"
+        "df_spacy = pd.read_csv('data/spacy_output.csv', error_bad_lines=False, sep = ',')\n",
+        "df_gold = pd.read_csv('data/spacy_output_gold.csv', error_bad_lines=False, sep = ';')"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 40,
       "metadata": {},
       "outputs": [
         {
@@ -1518,7 +1518,7 @@
               "7        en    ADP         en"
             ]
           },
-          "execution_count": 10,
+          "execution_count": 40,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1529,7 +1529,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 41,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -1543,7 +1543,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 42,
       "metadata": {},
       "outputs": [
         {
@@ -1765,19 +1765,21 @@
             "Token : répondit | Token Gold : répondit | lemma : répondit | lemma Gold : répondre\n",
             "Token : --Oh | Token Gold : --Oh | lemma : --oh | lemma Gold : --Oh\n",
             "Token : --Suivez | Token Gold : --Suivez | lemma : --suivez | lemma Gold : —suivre\n",
-            "Token : disparut | Token Gold : disparut | lemma : disparut | lemma Gold : disparaître\n"
+            "Token : disparut | Token Gold : disparut | lemma : disparut | lemma Gold : disparaître\n",
+            "Token : ﻿Dantès | Token Gold : Dantès\n"
           ]
         }
       ],
       "source": [
         "# confusion matrix\n",
         "vp_pos, fp_pos, fn_pos = conf_matrix(token, token_gold, \"POS\", pos, pos_gold)\n",
-        "vp_lemma, fp_lemma, fn_lemma = conf_matrix(token, token_gold, \"lemma\", lemma, lemma_gold)"
+        "vp_lemma, fp_lemma, fn_lemma = conf_matrix(token, token_gold, \"lemma\", lemma, lemma_gold)\n",
+        "vp_token, fp_token, fn_token = conf_matrix_token(token, token_gold)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 43,
       "metadata": {},
       "outputs": [
         {
@@ -1794,24 +1796,27 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": 44,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Pour annotation POS : P = 0.9089376053962901 | R = 1.0 | f-score = 0.9522968197879859\n",
-            "Pour annotation lemma : P = 0.9089376053962901 | R = 1.0 | f-score = 0.9522968197879859\n"
+            "Pour annotation POS : P = 0.909 | R = 1.0 | f-score = 0.952\n",
+            "Pour annotation lemma : P = 0.909 | R = 1.0 | f-score = 0.952\n",
+            "Pour tokenisation : P = 0.999 | R = 1.0 | f-score = 1.0\n"
           ]
         }
       ],
       "source": [
         "p_pos, r_pos, fscore_pos = p_r_fscore(vp_pos, fp_pos, fn_pos)\n",
         "p_lemma, r_lemma, fscore_lemma = p_r_fscore(vp_lemma, fp_lemma, fn_lemma)\n",
+        "p_token, r_token, fscore_token = p_r_fscore(vp_token, fp_token, fn_token)\n",
         "\n",
-        "print(f'Pour annotation POS : P = {p_pos} | R = {r_pos} | f-score = {fscore_pos}')\n",
-        "print(f'Pour annotation lemma : P = {p_lemma} | R = {r_lemma} | f-score = {fscore_lemma}')"
+        "print(f'Pour annotation POS : P = {round(p_pos,3)} | R = {round(r_pos,3)} | f-score = {round(fscore_pos,3)}')\n",
+        "print(f'Pour annotation lemma : P = {round(p_lemma,3)} | R = {round(r_lemma,3)} | f-score = {round(fscore_lemma,3)}')\n",
+        "print(f'Pour tokenisation : P = {round(p_token,3)} | R = {round(r_token,3)} | f-score = {round(fscore_token,3)}')"
       ]
     },
     {
@@ -1825,7 +1830,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": 45,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1838,21 +1843,21 @@
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "/tmp/ipykernel_7569/70534512.py:2: FutureWarning: The error_bad_lines argument has been deprecated and will be removed in a future version. Use on_bad_lines in the future.\n",
+            "/tmp/ipykernel_26831/1327330320.py:2: FutureWarning: The error_bad_lines argument has been deprecated and will be removed in a future version. Use on_bad_lines in the future.\n",
             "\n",
             "\n",
-            "  df_treetagger = pd.read_csv('treetagger_output.csv', error_bad_lines=False, sep = ';')\n",
-            "/tmp/ipykernel_7569/70534512.py:3: FutureWarning: The error_bad_lines argument has been deprecated and will be removed in a future version. Use on_bad_lines in the future.\n",
+            "  df_treetagger = pd.read_csv('data/treetagger_output.csv', error_bad_lines=False, sep = ';')\n",
+            "/tmp/ipykernel_26831/1327330320.py:3: FutureWarning: The error_bad_lines argument has been deprecated and will be removed in a future version. Use on_bad_lines in the future.\n",
             "\n",
             "\n",
-            "  df_gold = pd.read_csv('treetagger_output_gold.csv', error_bad_lines=False, sep = ';')\n"
+            "  df_gold = pd.read_csv('data/treetagger_output_gold.csv', error_bad_lines=False, sep = ';')\n"
           ]
         }
       ],
       "source": [
         "# data importer\n",
-        "df_treetagger = pd.read_csv('treetagger_output.csv', error_bad_lines=False, sep = ';')\n",
-        "df_gold = pd.read_csv('treetagger_output_gold.csv', error_bad_lines=False, sep = ';')\n",
+        "df_treetagger = pd.read_csv('data/treetagger_output.csv', error_bad_lines=False, sep = ';')\n",
+        "df_gold = pd.read_csv('data/treetagger_output_gold.csv', error_bad_lines=False, sep = ';')\n",
         "\n",
         "# récupération des données de chaque colonne par le biais de l'affectation\n",
         "token = df_treetagger['TOKEN']\n",
@@ -1865,7 +1870,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": 46,
       "metadata": {},
       "outputs": [
         {
@@ -1890,7 +1895,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": 47,
       "metadata": {},
       "outputs": [
         {
@@ -1984,7 +1989,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": 48,
       "metadata": {},
       "outputs": [
         {
@@ -2078,7 +2083,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": 49,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -2089,23 +2094,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 31,
+      "execution_count": 50,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Pour annotation POS : P = 0.9358752166377816 | R = 0.996309963099631 | f-score = 0.96514745308311\n",
-            "Pour annotation lemma : P = 0.9358752166377816 | R = 0.996309963099631 | f-score = 0.96514745308311\n",
-            "Pour tokenisation : P = 0.9956672443674177 | R = 0.9965307892454467 | f-score = 0.9960988296488947\n"
+            "Pour annotation POS : P = 0.93588 | R = 0.99631 | f-score = 0.96515\n",
+            "Pour annotation lemma : P = 0.93588 | R = 0.99631 | f-score = 0.96515\n",
+            "Pour tokenisation : P = 0.99567 | R = 0.99653 | f-score = 0.9961\n"
           ]
         }
       ],
       "source": [
-        "print(f'Pour annotation POS : P = {p_pos} | R = {r_pos} | f-score = {fscore_pos}')\n",
-        "print(f'Pour annotation lemma : P = {p_lemma} | R = {r_lemma} | f-score = {fscore_lemma}')\n",
-        "print(f'Pour tokenisation : P = {p_token} | R = {r_token} | f-score = {fscore_token}')"
+        "print(f'Pour annotation POS : P = {round(p_pos,5)} | R = {round(r_pos,5)} | f-score = {round(fscore_pos,5)}')\n",
+        "print(f'Pour annotation lemma : P = {round(p_lemma,5)} | R = {round(r_lemma,5)} | f-score = {round(fscore_lemma,5)}')\n",
+        "print(f'Pour tokenisation : P = {round(p_token,5)} | R = {round(r_token,5)} | f-score = {round(fscore_token,5)}')"
       ]
     },
     {
@@ -2128,7 +2133,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 51,
       "metadata": {
         "id": "pF9H7sJcAoCk"
       },
@@ -2136,30 +2141,30 @@
       "source": [
         "import csv\n",
         "\n",
-        "with open('/content/sem_lzFne2.text','r',encoding = 'utf-8') as infile:\n",
-        "  txt = infile.read()\n",
+        "#with open('/content/sem_lzFne2.text','r',encoding = 'utf-8') as infile:\n",
+        "#  txt = infile.read()\n",
         "\n",
-        "header = [\"TOKEN\", \"POS\"]\n",
+        "#header = [\"TOKEN\", \"POS\"]\n",
         "\n",
-        "with open('sem_output.csv', 'w', newline='') as outfile:\n",
-        "    writer = csv.writer(outfile)\n",
-        "    writer.writerow(header)\n",
-        "    for line in txt.split(' '):\n",
-        "        # on divise ici les deux attributs par l'espace\n",
-        "        fields = line.strip().split('/')   \n",
-        "        writer.writerow(fields)\n"
+        "#with open('sem_output.csv', 'w', newline='') as outfile:\n",
+        "#    writer = csv.writer(outfile)\n",
+        "#    writer.writerow(header)\n",
+        "#    for line in txt.split(' '):\n",
+        "#        # on divise ici les deux attributs par l'espace\n",
+        "#        fields = line.strip().split('/')   \n",
+        "#        writer.writerow(fields)\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 34,
+      "execution_count": 52,
       "metadata": {
         "id": "JsihJtq0U0eP"
       },
       "outputs": [],
       "source": [
-        "sem_df = pd.read_csv('sem_output.csv', sep = ',')\n",
-        "gold_df = pd.read_csv('sem_output_gold.csv', sep = ',')\n",
+        "sem_df = pd.read_csv('data/sem_output.csv', sep = ',')\n",
+        "gold_df = pd.read_csv('data/sem_output_gold.csv', sep = ',')\n",
         "\n",
         "token = sem_df['TOKEN']\n",
         "pos = sem_df['POS']\n",
@@ -2169,7 +2174,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 35,
+      "execution_count": 53,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -2283,7 +2288,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 36,
+      "execution_count": 54,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -2441,7 +2446,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 38,
+      "execution_count": 55,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -2458,23 +2463,44 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 39,
+      "execution_count": 56,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Pour annotation POS : P = 0.942883046237534 | R = 0.9497716894977168 | f-score = 0.9463148316651502\n",
-            "Pour annotation lemma : P = 0.9358752166377816 | R = 0.996309963099631 | f-score = 0.96514745308311\n",
-            "Pour tokenisation : P = 0.9675967596759676 | R = 0.9513274336283186 | f-score = 0.9593931280678268\n"
+            "Pour annotation POS : P = 0.943 | R = 0.95 | f-score = 0.946\n",
+            "Pour annotation lemma : P = 0.936 | R = 0.996 | f-score = 0.965\n",
+            "Pour tokenisation : P = 0.968 | R = 0.951 | f-score = 0.959\n"
           ]
         }
       ],
       "source": [
-        "print(f'Pour annotation POS : P = {p_pos} | R = {r_pos} | f-score = {fscore_pos}')\n",
-        "print(f'Pour annotation lemma : P = {p_lemma} | R = {r_lemma} | f-score = {fscore_lemma}')\n",
-        "print(f'Pour tokenisation : P = {p_token} | R = {r_token} | f-score = {fscore_token}')"
+        "print(f'Pour annotation POS : P = {round(p_pos,3)} | R = {round(r_pos,3)} | f-score = {round(fscore_pos,3)}')\n",
+        "print(f'Pour annotation lemma : P = {round(p_lemma,3)} | R = {round(r_lemma,3)} | f-score = {round(fscore_lemma,3)}')\n",
+        "print(f'Pour tokenisation : P = {round(p_token,3)} | R = {round(r_token,3)} | f-score = {round(fscore_token,3)}')"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 57,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Pour annotation POS : P = 0.94288 | R = 0.94977 | f-score = 0.94631\n",
+            "Pour annotation lemma : P = 0.93588 | R = 0.99631 | f-score = 0.96515\n",
+            "Pour tokenisation : P = 0.9676 | R = 0.95133 | f-score = 0.95939\n"
+          ]
+        }
+      ],
+      "source": [
+        "print(f'Pour annotation POS : P = {round(p_pos,5)} | R = {round(r_pos,5)} | f-score = {round(fscore_pos,5)}')\n",
+        "print(f'Pour annotation lemma : P = {round(p_lemma,5)} | R = {round(r_lemma,5)} | f-score = {round(fscore_lemma,5)}')\n",
+        "print(f'Pour tokenisation : P = {round(p_token,5)} | R = {round(r_token,5)} | f-score = {round(fscore_token,5)}')"
       ]
     }
   ],
