màj notebook (done)

--- a/annotation_monte_cristo.ipynb
+++ b/annotation_monte_cristo.ipynb
@@ -13,7 +13,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 31,
+      "execution_count": 58,
       "metadata": {
         "id": "JOyUp8ydlCLG"
       },
@@ -44,7 +44,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 32,
+      "execution_count": 59,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -68,7 +68,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 33,
+      "execution_count": 60,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -93,7 +93,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 34,
+      "execution_count": 61,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -116,7 +116,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 35,
+      "execution_count": 62,
       "metadata": {
         "id": "fwuLlrqwmWnV"
       },
@@ -132,7 +132,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 36,
+      "execution_count": 63,
       "metadata": {
         "id": "e1TVgE5XmWqE"
       },
@@ -144,7 +144,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 37,
+      "execution_count": 64,
       "metadata": {
         "id": "vXK0Z9FpmWs4"
       },
@@ -1351,7 +1351,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 38,
+      "execution_count": 65,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1392,7 +1392,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 39,
+      "execution_count": 66,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1424,7 +1424,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 40,
+      "execution_count": 67,
       "metadata": {},
       "outputs": [
         {
@@ -1518,7 +1518,7 @@
               "7        en    ADP         en"
             ]
           },
-          "execution_count": 40,
+          "execution_count": 67,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1529,7 +1529,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 41,
+      "execution_count": 68,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -1543,7 +1543,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 42,
+      "execution_count": 69,
       "metadata": {},
       "outputs": [
         {
@@ -1779,7 +1779,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 43,
+      "execution_count": 70,
       "metadata": {},
       "outputs": [
         {
@@ -1796,7 +1796,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 44,
+      "execution_count": 71,
       "metadata": {},
       "outputs": [
         {
@@ -1830,7 +1830,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 45,
+      "execution_count": 72,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1870,7 +1870,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 46,
+      "execution_count": 73,
       "metadata": {},
       "outputs": [
         {
@@ -1895,7 +1895,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 47,
+      "execution_count": 74,
       "metadata": {},
       "outputs": [
         {
@@ -1989,7 +1989,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 48,
+      "execution_count": 75,
       "metadata": {},
       "outputs": [
         {
@@ -2083,7 +2083,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 49,
+      "execution_count": 76,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -2094,7 +2094,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 50,
+      "execution_count": 77,
       "metadata": {},
       "outputs": [
         {
@@ -2133,7 +2133,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 51,
+      "execution_count": 78,
       "metadata": {
         "id": "pF9H7sJcAoCk"
       },
@@ -2157,7 +2157,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 52,
+      "execution_count": 79,
       "metadata": {
         "id": "JsihJtq0U0eP"
       },
@@ -2174,7 +2174,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 53,
+      "execution_count": 80,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -2278,29 +2278,7 @@
             "Token : nan | Token Gold : de\n",
             "Token : nan | Token Gold : suite\n",
             "Token : -Suivez-moi | Token Gold : -Suivez\n",
-            "Token : nan | Token Gold : -moi\n"
-          ]
-        }
-      ],
-      "source": [
-        "vp_token, fp_token, fn_token = conf_matrix_token(token, token_gold) "
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 54,
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "KRdlMrj8HoNC",
-        "outputId": "5b21637c-2ce1-430b-8e48-a925e0180c93"
-      },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
+            "Token : nan | Token Gold : -moi\n",
             "Token : ﻿Dantès | Token Gold : ﻿Dantès | POS : NC | POS Gold : NPP\n",
             "Token : en_effet | Token Gold : en | POS : ADV | POS Gold : P\n",
             "Token : nan | Token Gold : effet | POS : nan | POS Gold : NC\n",
@@ -2441,12 +2419,13 @@
         }
       ],
       "source": [
+        "vp_token, fp_token, fn_token = conf_matrix_token(token, token_gold) \n",
         "vp_pos, fp_pos, fn_pos = conf_matrix(token, token_gold, \"POS\", pos, pos_gold)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 55,
+      "execution_count": 81,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -2457,13 +2436,12 @@
       "outputs": [],
       "source": [
         "p_token, r_token, fscore_token = p_r_fscore(vp_token, fp_token, fn_token)\n",
-        "p_pos, r_pos, fscore_pos = p_r_fscore(vp_pos, fp_pos, fn_pos)\n",
-        "p_lemma, r_lemma, fscore_lemma = p_r_fscore(vp_lemma, fp_lemma, fn_lemma)"
+        "p_pos, r_pos, fscore_pos = p_r_fscore(vp_pos, fp_pos, fn_pos)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 56,
+      "execution_count": 82,
       "metadata": {},
       "outputs": [
         {
@@ -2471,20 +2449,18 @@
           "output_type": "stream",
           "text": [
             "Pour annotation POS : P = 0.943 | R = 0.95 | f-score = 0.946\n",
-            "Pour annotation lemma : P = 0.936 | R = 0.996 | f-score = 0.965\n",
             "Pour tokenisation : P = 0.968 | R = 0.951 | f-score = 0.959\n"
           ]
         }
       ],
       "source": [
         "print(f'Pour annotation POS : P = {round(p_pos,3)} | R = {round(r_pos,3)} | f-score = {round(fscore_pos,3)}')\n",
-        "print(f'Pour annotation lemma : P = {round(p_lemma,3)} | R = {round(r_lemma,3)} | f-score = {round(fscore_lemma,3)}')\n",
         "print(f'Pour tokenisation : P = {round(p_token,3)} | R = {round(r_token,3)} | f-score = {round(fscore_token,3)}')"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 57,
+      "execution_count": 83,
       "metadata": {},
       "outputs": [
         {
@@ -2492,14 +2468,12 @@
           "output_type": "stream",
           "text": [
             "Pour annotation POS : P = 0.94288 | R = 0.94977 | f-score = 0.94631\n",
-            "Pour annotation lemma : P = 0.93588 | R = 0.99631 | f-score = 0.96515\n",
             "Pour tokenisation : P = 0.9676 | R = 0.95133 | f-score = 0.95939\n"
           ]
         }
       ],
       "source": [
         "print(f'Pour annotation POS : P = {round(p_pos,5)} | R = {round(r_pos,5)} | f-score = {round(fscore_pos,5)}')\n",
-        "print(f'Pour annotation lemma : P = {round(p_lemma,5)} | R = {round(r_lemma,5)} | f-score = {round(fscore_lemma,5)}')\n",
         "print(f'Pour tokenisation : P = {round(p_token,5)} | R = {round(r_token,5)} | f-score = {round(fscore_token,5)}')"
       ]
     }
